2025-09-03T01:23:23Z:
* notice: GitHub Actions Run: https://github.com/andry81-devops/actions/actions/runs/17420259218 # 755
* notice: Stats Output Repository: https://github.com/andry81-stats/gh-workflow--gh-stats/commits?branch=master&time_zone=utc&until=2025-09-03
* notice: last 14d: unq all: 6 1667
* notice: prev accum: outdated-unq outdated-all / unq all: 2781 266735 / 2812 268501
* notice: next accum: outdated-unq outdated-all / unq all: 2783 266858 / 2812 268597
* notice: prev exec diff / last date diff / accum: unq all: +0 +96 -1 -72 / +2 +124 -0 -0 / 2 124
* notice: removed / changed dates: [2025-08-19] / [2025-08-20 2025-09-02]

2025-09-02T01:37:01Z:
* notice: GitHub Actions Run: https://github.com/andry81-devops/actions/actions/runs/17390756653 # 754
* notice: Stats Output Repository: https://github.com/andry81-stats/gh-workflow--gh-stats/commits?branch=master&time_zone=utc&until=2025-09-02
* notice: last 14d: unq all: 6 1696
* notice: prev accum: outdated-unq outdated-all / unq all: 2779 266615 / 2810 268364
* notice: next accum: outdated-unq outdated-all / unq all: 2781 266735 / 2812 268501
* notice: prev exec diff / last date diff / accum: unq all: +2 +137 -1 -70 / +2 +28 -0 -0 / 2 28
* notice: removed / changed dates: [2025-08-18] / [2025-08-19 2025-09-01 2025-09-02]

2025-09-01T01:49:22Z:
* notice: GitHub Actions Run: https://github.com/andry81-devops/actions/actions/runs/17365414659 # 753
* notice: Stats Output Repository: https://github.com/andry81-stats/gh-workflow--gh-stats/commits?branch=master&time_zone=utc&until=2025-09-01
* notice: last 14d: unq all: 6 1686
* notice: prev accum: outdated-unq outdated-all / unq all: 2776 266492 / 2808 268248
* notice: next accum: outdated-unq outdated-all / unq all: 2779 266615 / 2810 268364
* notice: prev exec diff / last date diff / accum: unq all: +2 +116 -1 -63 / +2 +13 -0 -0 / 2 13
* notice: removed / changed dates: [2025-08-17] / [2025-08-18 2025-08-31 2025-09-01]

2025-08-31T01:40:11Z: