@@ -1,9 +1,9 @@
 {
-  "timestamp" : "2025-08-30T01:23:32Z",
-  "count" : 124,
-  "count_minmax" : [ 123, 124 ],
-  "count_decinc" : [ -2, +126 ],
-  "uniques" : 2,
-  "uniques_minmax" : [ 2, 2 ],
-  "uniques_decinc" : [ -0, +2 ]
+  "timestamp" : "2025-09-04T01:23:30Z",
+  "count" : 50,
+  "count_minmax" : [ 50, 124 ],
+  "count_decinc" : [ -76, +126 ],
+  "uniques" : 1,
+  "uniques_minmax" : [ 1, 2 ],
+  "uniques_decinc" : [ -1, +2 ]
 }
