@@ -1,27 +1,18 @@
 {
-  "timestamp" : "2025-09-03T01:23:23Z",
-  "count_outdated" : 266858,
-  "uniques_outdated" : 2783,
-  "count" : 268597,
-  "uniques" : 2812,
+  "timestamp" : "2025-09-04T01:23:30Z",
+  "count_outdated" : 266982,
+  "uniques_outdated" : 2785,
+  "count" : 268722,
+  "uniques" : 2814,
   "clones" : [
     {
-      "timestamp": "2025-08-20T00:00:00Z",
-      "count": 52,
-      "count_minmax": [ 52, 124 ],
-      "count_decinc": [ 72, 124 ],
+      "timestamp": "2025-08-21T00:00:00Z",
+      "count": 50,
+      "count_minmax": [ 50, 124 ],
+      "count_decinc": [ 76, 126 ],
       "uniques": 1,
       "uniques_minmax": [ 1, 2 ],
       "uniques_decinc": [ 1, 2 ]
-    },
-    {
-      "timestamp": "2025-08-21T00:00:00Z",
-      "count": 124,
-      "count_minmax": [ 123, 124 ],
-      "count_decinc": [ 2, 126 ],
-      "uniques": 2,
-      "uniques_minmax": [ 2, 2 ],
-      "uniques_decinc": [ 0, 2 ]
     },
     {
       "timestamp": "2025-08-22T00:00:00Z",
@@ -127,6 +118,15 @@
       "count": 124,
       "count_minmax": [ 28, 124 ],
       "count_decinc": [ 0, 124 ],
+      "uniques": 2,
+      "uniques_minmax": [ 2, 2 ],
+      "uniques_decinc": [ 0, 2 ]
+    },
+    {
+      "timestamp": "2025-09-03T00:00:00Z",
+      "count": 125,
+      "count_minmax": [ 125, 125 ],
+      "count_decinc": [ 0, 125 ],
       "uniques": 2,
       "uniques_minmax": [ 2, 2 ],
       "uniques_decinc": [ 0, 2 ]
