@@ -1,16 +1,11 @@
 {
-  "count": 1667,
+  "count": 1666,
   "uniques": 6,
   "clones": [
     {
-      "timestamp": "2025-08-20T00:00:00Z",
-      "count": 52,
-      "uniques": 1
-    },
-    {
       "timestamp": "2025-08-21T00:00:00Z",
-      "count": 124,
-      "uniques": 2
+      "count": 50,
+      "uniques": 1
     },
     {
       "timestamp": "2025-08-22T00:00:00Z",
@@ -70,6 +65,11 @@
     {
       "timestamp": "2025-09-02T00:00:00Z",
       "count": 124,
+      "uniques": 2
+    },
+    {
+      "timestamp": "2025-09-03T00:00:00Z",
+      "count": 125,
       "uniques": 2
     }
   ]
